test/libsolidity/syntaxTests/functionTypes/payable_internal_function_type.sol
contract C {
    function (uint) internal payable returns (uint) x;
}
// ----
// TypeError: (17-66): Only external function types can be payable.
